tests/errors/UnknownIdentifier6.q
main() {
	os.exit(0)
}